# domain-piece-of-clothing

./: Makefile  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: requisitar-funcionalidade-do-produto.md
.github/workflows/: build.yml
domain_piece_of_clothing/: containers_config.py  main.py
domain_piece_of_clothing/adapters/: __factory__.py  __init__.py
domain_piece_of_clothing/adapters/controllers/: __binding__.py  __dependencies__.py  __init__.py  cloth_specification_controller.py  dtos.py  interfaces.py  piece_of_clothing_controller.py
domain_piece_of_clothing/adapters/interface_adapters/: __init__.py  cloth_specification_adapter.py  exceptions.py  piece_of_clothing_adapter.py
domain_piece_of_clothing/adapters/interface_adapters/interfaces/: __init__.py  document_database_provider.py  interfaces.py
domain_piece_of_clothing/business/: __factory__.py  __init__.py  interfaces.py  ports.py  services.py
domain_piece_of_clothing/business/use_cases/: __init__.py  add_cloth_specification_use_case.py  interfaces.py  register_piece_of_clothing_use_case.py  remove_cloth_specification_use_case.py  remove_piece_of_clothing_use_case.py  retrieve_clothes_use_case.py  update_cloth_specification_use_case.py  update_piece_of_clothing_use_case.py
domain_piece_of_clothing/frameworks/: __factory__.py  __init__.py
domain_piece_of_clothing/frameworks/mongodb/: manager.py
domain_piece_of_clothing/models/: __init__.py  filters.py  piece_of_clothing.py
